
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Huff_GetByteFromTree (int ,unsigned char*) ;
 int huffBitPos ;
 int * huffTree ;

int Huff_GetByte( unsigned char *buffer, int *count ) {
 int ch;

 huffBitPos = *count;
 ch = Huff_GetByteFromTree( huffTree[2], buffer );
 *count = huffBitPos;

 return ch;
}
